0.7.1 (unreleased)
==================
* Fix reporting problems with non-ASCII characters when using
  gobject-introspection (LP: #785578).
* Fix ^C not exiting the app when using gobject-introspection.
* Implement panel icon color autodetection logic that was missing in the
  gobject-introspection case (LP: #924390).
* New command-line option: --help.


0.7.0 (2011-09-21)
==================
* Use gobject-introspection by default, using pygtk only as a fallback.  This
  will require a newer gir1.2-pango-1.0 than what's in Ubuntu Oneiric
  (LP: #855076) and still suffers from key presses being ignored
  (LP: #849732).  Unset the environment variable UBUNTU_MENUPROXY to work
  around the latter bug.
* Rework the gi/pygtk imports so that only the minimum is wrapped in a
  try-except.
* Use /usr/bin/env python in #! line, though this should be hard-coded to the
  installed version of Python in the Debian package.
* Other code cleanup (e.g. use new-style classes via __metaclass__, remove
  ancient workaround for missing `set` built-in).


0.6.1 (2011-09-20)
==================
* Fix two crashes when using GI.  Given by Martin Pitt.


0.6.0 (2011-08-23)
==================
* Ctrl-Q now quits.  (LP: #750092)
* Fixed UnboundLocalError.  (LP: #778285)  Given by Jeroen Langeveld.
* Ported from PyGTK to GI. This supports GTK 2 and GTK 3 with GI now, but still
  works with PyGTK.
  Contributed by Martin Pitt <martin.pitt@ubuntu.com>.

  Packager's note: If you want to use GI, you need to change the package's
  dependencies from pygtk to the package that provides the GTK and Pango
  typelibs (e. g. gir1.2-gtk-2.0 and gir1.2-pango-1.0 on Debian/Ubuntu). It
  also requires pygobject >= 2.27.1.

* Hide the main window on Esc.  Fixes LP: #716257.
  Contributed by Vladislav Naumov (https://launchpad.net/~vnaum).


0.5.0 (2011-01-28)
==================
* Switched from Glade to GtkBuilder.  This fixes those strange theme problems